--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ language: cpp
 dist: trusty
 sudo: required
 
-env:
-  global:
-   - SDL_VIDEODRIVER: dummy
-
 matrix:
   include:
 
@@ -61,3 +57,6 @@ before_script:
   - cd ${TRAVIS_BUILD_DIR}
   - cmake -H. -BBuild -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -Wdev
   - cd Build
+  
+script:
+  - make -j 2
