--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,14 @@ sudo: required
 matrix:
   include:
 
-    # Linux C++14 GCC builds
+- os: linux
+  compiler: gcc
+  addons: &gcc4
+    apt:
+      sources: ['ubuntu-toolchain-r-test']
+      packages: ['g++-4.8']
+      env: MATRIX_EVAL="CC=gcc-4.8 && CXX=g++-4.8" BUILD_TYPE='Debug'
+      
     - os: linux
       compiler: gcc
       addons: &gcc7
